[project]
name = "posxhe"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "dishka (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = 3.13
files = "app"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.poetry.group.dev.dependencies]
asyncpg = "^0.30.0"

